--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -16,15 +16,16 @@
 	<%= f.label :username, class: "col-2 col-form-label" %>
 	<div class="col-10">
 		<%= f.text_field :username, class: "form-control", placeholder: "Username"%>
-<span id="unique_username" style="display: none;">Username has already been taken.</span></div>
+		<span id="unique_username" style="display: none;">Username has already been taken.</span>
+	</div>
 </div>
 
 <div class="form-group m-t-40 row">
 	<%= f.label :email, class: "col-2 col-form-label" %>
 	<div class="col-10">
 		<%= f.text_field :email, class: "form-control", placeholder: "Email"%>
-<span id="unique_email" style="display: none;">Email has already been taken.</span>
-</div>
+		<span id="unique_email" style="display: none;">Email has already been taken.</span>
+	</div>
 </div>
 
 <div class="form-group m-t-40 row">
@@ -34,25 +35,38 @@
 	</div>
 </div>
 
-<div class="form-group m-t-40 row">
-	<%#= f.fields_for :experience, @experience do |ff| %>
-	<%# end %>
-</div>
+<%= f.link_to_add "Add Technology Experience", :technology_experiences, class: "btn btn-success" %>
 
-<div class="form-group m-t-40 row">
-	<%= f.label :secondary_technology, class: "col-2 col-form-label" %>
-	<div class="col-10">
-		<%= f.text_field :secondary_technology, class: "form-control", placeholder: "Secondary Technology"%>
+<%= f.fields_for :technology_experiences do |technology_experience| %>
+	<hr>
+	<div class="form-group m-t-40 row">
+		<div class="col-3">
+			<div class="row">
+				<%= technology_experience.label :technology_id, class: "col-form-label col-4" %>
+				<div class="col-8">
+					<%= technology_experience.select :technology_id, Technology.all.collect { |technology| [ technology&.name, technology&.id ] }, {include_blank: "select"}, {class: "select2 form-control custom-select",} %>
+				</div>
+			</div>
+		</div>
+		<div class="col-4">
+				<div class="row">
+				<%= technology_experience.label :start_date, class: "col-form-label col-4" %>
+				<div class="col-8">
+					<%= technology_experience.date_field :start_date, class: "form-control",placeholder: "Start Date"%>
+				</div>
+			</div>
+		</div>
+		<div class="col-4">
+				<div class="row">
+				<%= technology_experience.label :end_date, class: "col-form-label col-4" %>
+				<div class="col-8">
+					<%= technology_experience.date_field :end_date, class: "form-control",placeholder: "Start Date"%>
+				</div>
+			</div>
+		</div>
+		<div class="col-1">
+			<%= technology_experience.link_to_remove "", class: "btn btn-danger fa fa-trash icon-color-size" %>
+		</div>
 	</div>
-</div>
-
-<div class="form-group m-t-40 row">
-	<%= f.label :is_primary, class: "col-2 col-form-label" %>
-	<div class="col-10">
-		<% if current_page? (static_page_profile_url) %>
-			<%= f.check_box :is_primary, class: "form-control", disabled: true%>
-		<% else %>
-			<%= f.check_box :is_primary, class: "form-control"%>
-		<% end %>
-	</div>
-</div>
+		
+<% end %>
