--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,10 +1,12 @@
 <%= javascript_include_tag "employees"  %>
+<%= javascript_include_tag "nested_form" %>
+
 <div class="row">
   <div class="col-sm-12">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Edit Employee</h4>
-				<%= form_for @employee do |f| %>
+				<%= nested_form_for @employee do |f| %>
 					<%= render "form", f: f %>
 					<%= f.submit "Update Employee", id: "employee_submit", class: "btn btn-success waves-effect waves-light m-r-10" %>
 				<% end %>
